# urag

./: .gitignore  README.md  README.me  docker-compose.yml  package-lock.json  package.json
backend/: pyproject.toml
backend/localrag/: __init__.py  config.py  main.py
backend/localrag/api/routes/: chat.py  documents.py  search.py
backend/localrag/core/: __init__.py  document_processor.py  vector_store.py  web_search.py
backend/localrag/database/: mongodb.py
backend/localrag/models/: chat.py
backend/tests/: conftest.py
backend/tests/core/: test_document_processor.py  test_vector_store.py
frontend/: next.config.js  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
frontend/src/api/: index.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/[chatId]/: page.tsx
frontend/src/app/chat/[id]/: page.tsx
frontend/src/app/chat/new/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/components/: ApiKeyWarning.tsx  ChatHistory.tsx  ChatSearch.tsx  DocumentList.tsx  DocumentPreview.tsx  MentionPopup.tsx  RootLayout.tsx  SearchResult.tsx  SearchSection.tsx  Settings.tsx  TypingAnimation.tsx  UploadButton.tsx  UploadSection.tsx
frontend/src/components/ui/: dialog.tsx  select.tsx
frontend/src/types/: search.ts
